--- a/home.html
+++ b/home.html
@@ -338,6 +338,9 @@
   <footer>
     <p>&copy; 2025 Country Inns | Proudly serving the New Forest</p>
   </footer>
-
+ <!-- Global app.js: offline banner + OneSignal -->
+  <script src="app.js"></script>
+</body>
+</html>
 </body>
 </html>
