--- a/royaloak.html
+++ b/royaloak.html
@@ -149,9 +149,12 @@ blends tradition with contemporary flavours</p>
     <a href="Royal-Oak-images/Royal-Oak-Menus/main-menu/Summer Menu.html">Menu</a>
     <a href="Royal-Oak-images/Royal-Oak-Menus/sunday-menu/Sunday Menu.html">Sunday Menu</a>
     <a href="Royal-Oak-images/Royal-Oak-Menus/desserts-menu/Dessert Menu ROB.html">Desserts Menu</a>
-    <a href="Royal-Oak-images/Christmas/Oak-Christmas.html">Christmas Menus 2025</a>
   </div>
 
+  <h2>Gallery</h2>
+  <div class="buttons">
+    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Drinks Menu</a>
+    
   <h2>Drink Menus</h2>
   <div class="buttons">
     <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Drinks Menu</a>
