--- a/boldforester.html
+++ b/boldforester.html
@@ -146,9 +146,12 @@
     <a href="bold-forester-images/bold-forester-menus/sunday-menu/bold-new-sunday-menu-25.html">Sunday Menu</a>
     <a href="bold-forester-images/bold-forester-menus/kids-menu/bold-new-kids-menu-25.html">Kids Menu</a>
     <a href="bold-forester-images/bold-forester-menus/desserts-menu/bold-new-dessert-menu-25.html">Desserts Menu</a>
-    <a href="bold-forester-images/Christmas/Bold-Christmas.html">Christmas Menus 2025</a>
   </div>
 
+   <h2>Gallery</h2>
+  <div class="buttons">
+    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Gallery</a>
+    
   <h2>Drink Menus</h2>
   <div class="buttons">
     <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks-menu-25th-feb.html">Drinks Menu</a>
