--- a/trustyservant.html
+++ b/trustyservant.html
@@ -148,9 +148,12 @@ A charming 16th century pub in Minstead, offering a warm welcome, fine ales, and
     <a href="Trusty-Servant-images/Trusty-Servant-Menus/sunday-menu/Autumn-Sunday-Menu-Final-oct-25.html">Sunday Menu</a>
     <a href="Trusty-Servant-images/Trusty-Servant-Menus/kids-menu/Tiny-tums-menu.html">Kids Menu</a>
     <a href="Trusty-Servant-images/Trusty-Servant-Menus/desserts-menu/March-24-dessert-menu-oct-25.html">Desserts Menu</a>
-    <a href="Trusty-Servant-images/Christmas/Trusty-Christmas.html">Christmas Menus 2025</a>
   </div>
 
+   <h2>Gallery</h2>
+  <div class="buttons">
+    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Gallery</a>
+    
   <h2>Drink Menus</h2>
   <div class="buttons">
     <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks-menu-feb.html">Drinks Menu</a>
