--- a/woolpack.html
+++ b/woolpack.html
@@ -146,9 +146,12 @@ Set by the Avon river, this classic pub is a perfect spot for delicious dining a
     <a href="Woolpack-images/Woolpack-Menus/main-menu/summer-menu-2025.html">Menu</a>
     <a href="Woolpack-images/Woolpack-Menus/sunday-menu/Summer-sunday-menu-2025(3).html">Sunday Menu</a>
     <a href="Woolpack-images/Woolpack-Menus/2 Course-menu/Woolpack 2 Course Menu.html">2 Course Menu</a>
-    <a href="Woolpack-images/Christmas/Woolpack-Christmas.html">Christmas Menus 2025</a>
   </div>
 
+   <h2>Gallery</h2>
+  <div class="buttons">
+    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Gallery</a>
+    
   <h2>Drink Menus</h2>
   <div class="buttons">
     <a href="bold-forester-images/bold-forester-menus/wine-list/wine list-Apr24.html">Wine List</a>
