--- a/newforestinn.html
+++ b/newforestinn.html
@@ -156,9 +156,12 @@ A traditional New Forest pub, perfect for relaxed dining, real ales, cosy stay, 
     <a href="New-Forest-Inn-images/New-Forest-Inn-Menus/sunday-menu/Sunday-Menu-Spring-2025.html">Sunday Menu</a>
     <a href="New-Forest-Inn-images/New-Forest-Inn-Menus/kids-menu/News-kids-2-25.html">Kids Menu</a>
     <a href="New-Forest-Inn-images/New-Forest-Inn-Menus/desserts-menu/Dessert-Menu-25.html">Desserts Menu</a>
-    <a href="New-Forest-Inn-images/Christmas/New-Forest-Inn-Christmas.html">Christmas Menus 2025</a>
   </div>
 
+   <h2>Gallery</h2>
+  <div class="buttons">
+    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Gallery</a>
+    
   <h2>Drink Menus</h2>
   <div class="buttons">
     <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks-menu-feb.html">Drinks Menu</a>
