--- a/lambinn.html
+++ b/lambinn.html
@@ -147,9 +147,12 @@ steeped in heritage, The Lamb Inn offers hearty food, roaring fires, and a true 
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/sunday-menu/Sunday-25.26-.html">Sunday Menu</a>
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/kids-menu/Lamb-Kids-Menu-april-25.html">Kids Menu</a>
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/desserts-menu/Classics-dessert-april-25.html">Desserts Menu</a>
-    <a href="Lamb-Inn-images/Christmas/Lamb-Christmas.html">Christmas Menus 2025</a>
   </div>
 
+ <h2>Gallery</h2>
+  <div class="buttons">
+    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Gallery</a>
+  
   <h2>Drink Menus</h2>
   <div class="buttons">
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/drinks-menu/Drinks Menu.html">Drinks Menu</a>
