--- a/fightingcocks.html
+++ b/fightingcocks.html
@@ -148,9 +148,12 @@ A vibrant pub known for its atmosphere, fantastic food, and a great selection of
     <a href="Fighting-Cocks-images/fighting-cocks-menus/sunday-menu/FC WINTER 25 SUNDAY MENU.html">Sunday Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/kids-menu/New-Kids-menu-Fighting-Cocks.html">Kids Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/desserts-menu/FC New Dessert Menu 2025.html">Desserts Menu</a>
-    <a href="Fighting-Cocks-images/Christmas/Fighting-Cocks-Christmas.html">Christmas Menus 2025</a>
   </div>
 
+ <h2>Gallery</h2>
+  <div class="buttons">
+    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Gallery</a>
+  
   <h2>Drink Menus</h2>
   <div class="buttons">
     <a href="Fighting-Cocks-images/fighting-cocks-menus/drinks-menu/FC-New-Drinks-Menu.html">Drinks Menu</a>
