--- a/royaloak.html
+++ b/royaloak.html
@@ -160,7 +160,7 @@ blends tradition with contemporary flavours</p>
 
  <h2>Gallery</h2>
   <div class="buttons">
-    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Drinks Menu</a>
+    <a href="Royal-Oak-images/Gallery/">Gallery</a>
   
   <h2>What’s On</h2>
   <div class="buttons">
