--- a/Royal-Oak-images/Gallery/Pub/pub.html
+++ b/Royal-Oak-images/Gallery/Pub/pub.html
@@ -1,7 +1,7 @@
 <h1>Pub Gallery</h1>
 
 <div class="gallery">
-  <img src="Royal-Oak-images/Gallery/Pub/">
+  <img src="Royal-Oak-images/Gallery/Pub/ROB.jpg">
 </div>
 
 <a href="./">← Back</a>
