--- a/Royal-Oak-images/Gallery/pub.html
+++ b/Royal-Oak-images/Gallery/pub.html
@@ -38,6 +38,7 @@ body {
 </div>
 
 <a href="./" style="color:#e6d8b5;">← Back to Gallery</a>
-
+<a href="././" style="color:#e6d8b5;">← Back to Pub</a>
+<a href="./././" style="color:#e6d8b5;">← Back to Home</a>
 </body>
 </html>
