--- a/Royal-Oak-images/Gallery/pub.html
+++ b/Royal-Oak-images/Gallery/pub.html
@@ -34,7 +34,7 @@ body {
 <h1>Pub Gallery</h1>
 
 <div class="gallery">
-  <img src="ROB.jpg" alt="Royal Oak pub">
+  <img src="Pub/ROB.jpg" alt="Royal Oak pub">
 </div>
 
 <a href="./" style="color:#e6d8b5;">← Back to Gallery</a>
