--- a/Royal-Oak-images/Gallery/index.html
+++ b/Royal-Oak-images/Gallery/index.html
@@ -39,7 +39,7 @@ body {
   <a class="option" href="pub.html">🍺 Pub Gallery</a>
 </div>
 
-<a href="../../">← Back to Pub</a>
+<a href="../">← Back to Pub</a>
 
 </body>
 </html>
