--- a/Royal-Oak-images/Gallery/pub.html
+++ b/Royal-Oak-images/Gallery/pub.html
@@ -37,10 +37,10 @@ body {
   <img src="Pub/ROB.jpg" alt="Royal Oak pub">
 </div>
 
+<div class="buttons">
 <a href="../" style="color:#e6d8b5;">← Back to Gallery</a>
-  
 <a href="../../" style="color:#e6d8b5;">← Back to Pub</a>
-  
 <a href="../../../" style="color:#e6d8b5;">← Back to Home</a>
+</div>  
 </body>
 </html>
