--- a/Royal-Oak-images/Gallery/pub.html
+++ b/Royal-Oak-images/Gallery/pub.html
@@ -38,9 +38,9 @@ body {
 </div>
 
 <div class="buttons">
-<a href="../" style="color:#e6d8b5;">← Back to Gallery</a>
-<a href="../../" style="color:#e6d8b5;">← Back to Pub</a>
-<a href="../../../" style="color:#e6d8b5;">← Back to Home</a>
+<a href="index.html" style="color:#e6d8b5;">← Back to Gallery</a>
+<a href="../../royaloak.html">← Back to Pub</a>
+<a href="../../../home.html" style="color:#e6d8b5;">← Back to Home</a>
 </div>  
 </body>
 </html>
