--- a/Royal-Oak-images/Gallery/pub.html
+++ b/Royal-Oak-images/Gallery/pub.html
@@ -1,46 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Royal Oak – Pub Gallery</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Royal Oak – Pub Gallery</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-body {
-  background: #1e2b1e;
-  color: #f4f4f4;
-  font-family: 'Segoe UI', sans-serif;
-  text-align: center;
-}
+  <style>
+    body {
+      margin: 0;
+      background: linear-gradient(180deg, #2e472e, #1e2b1e);
+      color: #f4f4f4;
+      font-family: 'Segoe UI', sans-serif;
+      text-align: center;
+    }
 
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-  gap: 12px;
-  padding: 1rem;
-}
+    h1 {
+      color: #e6d8b5;
+      margin: 1.5rem 0;
+    }
 
-.gallery img {
-  width: 100%;
-  height: 160px;
-  object-fit: cover;
-  border-radius: 10px;
-}
-</style>
+    /* Gallery grid */
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+      gap: 12px;
+      padding: 1rem;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    .gallery img {
+      width: 100%;
+      height: 160px;
+      object-fit: cover;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    }
+
+    /* Buttons */
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin: 2rem auto 3rem;
+      max-width: 280px;
+    }
+
+    .buttons a {
+      display: block;
+      background: #3c5a3c;
+      color: #fff;
+      text-decoration: none;
+      padding: 1rem;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: background 0.3s, transform 0.2s;
+    }
+
+    .buttons a:hover {
+      background: #4f7c4f;
+      transform: translateY(-2px);
+    }
+
+    footer {
+      margin-top: 2rem;
+      padding: 1rem;
+      font-size: 0.85rem;
+      background: rgba(0,0,0,0.2);
+    }
+  </style>
 </head>
 
 <body>
 
-<h1>Pub Gallery</h1>
+  <h1>Pub Gallery</h1>
 
-<div class="gallery">
-  <img src="Pub/ROB.jpg" alt="Royal Oak pub">
-</div>
+  <div class="gallery">
+    <!-- Make sure folder name is EXACTLY "pub" -->
+    <img src="Pub/ROB.jpg" alt="The Royal Oak Pub">
+    <!-- Add more images as needed -->
 
-<div class="buttons">
-<a href="index.html" style="color:#e6d8b5;">← Back to Gallery</a>
-<a href="../../royaloak.html">← Back to Pub</a>
-<a href="../../../home.html" style="color:#e6d8b5;">← Back to Home</a>
-</div>  
+
+  </div>
+
+  <div class="buttons">
+    <a href="index.html">← Back to Gallery</a>
+    <a href="../../royaloak.html">← Back to Pub</a>
+    <a href="../../../home.html">← Back to Home</a>
+  </div>
+
+  <footer>
+    © 2025 Country Inns – The Royal Oak
+  </footer>
+
 </body>
 </html>
