--- a/Royal-Oak-images/Gallery/index.html
+++ b/Royal-Oak-images/Gallery/index.html
@@ -96,10 +96,10 @@
     <!-- <a class="option" href="rooms.html">🛏 Rooms Gallery</a> -->
   </div>
 
-  <div class="buttons">
-    <a href="../../royaloak.html">← Back to Pub</a>
-    <a href="../../../home.html">← Back to Home</a>
-  </div>
+<div class="buttons">
+  <a href="/countryinns-pwa/royaloak.html">← Back to Pub</a>
+  <a href="/countryinns-pwa/home.html">← Back to Home</a>
+</div>
 
   <footer>
     © 2025 Country Inns – The Royal Oak
