--- a/Royal-Oak-images/Gallery/pub.html
+++ b/Royal-Oak-images/Gallery/pub.html
@@ -83,11 +83,10 @@
 
   </div>
 
-  <div class="buttons">
-   
-    <a href="../../royaloak.html">← Back to Pub</a>
-    <a href="../../../home.html">← Back to Home</a>
-  </div>
+<div class="buttons">
+  <a href="/countryinns-pwa/royaloak.html">← Back to Pub</a>
+  <a href="/countryinns-pwa/home.html">← Back to Home</a>
+</div>
 
   <footer>
     © 2025 Country Inns – The Royal Oak
