--- a/Royal-Oak-images/Gallery/pub.html
+++ b/Royal-Oak-images/Gallery/pub.html
@@ -16,25 +16,25 @@
 
     h1 {
       color: #e6d8b5;
-      margin: 1.5rem 0;
+      margin: 1.75rem 0 1rem;
     }
 
-    /* Gallery grid */
+    /* Gallery grid – BIGGER IMAGES */
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-      gap: 12px;
-      padding: 1rem;
-      max-width: 900px;
+      grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+      gap: 16px;
+      padding: 1.5rem;
+      max-width: 1100px;
       margin: auto;
     }
 
     .gallery img {
       width: 100%;
-      height: 160px;
+      height: 220px;
       object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      border-radius: 12px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.35);
     }
 
     /* Buttons */
@@ -42,7 +42,7 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      margin: 2rem auto 3rem;
+      margin: 2.5rem auto 3rem;
       max-width: 280px;
     }
 
@@ -68,6 +68,17 @@
       font-size: 0.85rem;
       background: rgba(0,0,0,0.2);
     }
+
+    /* Extra large images on desktop */
+    @media (min-width: 900px) {
+      .gallery {
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      }
+
+      .gallery img {
+        height: 260px;
+      }
+    }
   </style>
 </head>
 
@@ -76,17 +87,15 @@
   <h1>Pub Gallery</h1>
 
   <div class="gallery">
-    <!-- Make sure folder name is EXACTLY "pub" -->
+    <!-- Folder MUST be named exactly "Pub" (case-sensitive) -->
     <img src="Pub/ROB.jpg" alt="The Royal Oak Pub">
-    <!-- Add more images as needed -->
-
 
   </div>
 
-<div class="buttons">
-  <a href="/countryinns-pwa/royaloak.html">← Back to Pub</a>
-  <a href="/countryinns-pwa/home.html">← Back to Home</a>
-</div>
+  <div class="buttons">
+    <a href="/countryinns-pwa/royaloak.html">← Back to Pub</a>
+    <a href="/countryinns-pwa/home.html">← Back to Home</a>
+  </div>
 
   <footer>
     © 2025 Country Inns – The Royal Oak
