--- a/Royal-Oak-images/Gallery/pub.html
+++ b/Royal-Oak-images/Gallery/pub.html
@@ -89,17 +89,17 @@
   <div class="gallery">
     <!-- Folder MUST be named exactly "Pub" (case-sensitive) -->
     <img src="Pub/ROB.jpg" alt="The Royal Oak Pub">
-    <img src="FB_IMG_1766830418704.jpg" alt="The Royal Oak Pub">
-    <img src="FB_IMG_1766830645222.jpg" alt="The Royal Oak Pub">
-    <img src="FB_IMG_1766830656365.jpg" alt="The Royal Oak Pub">
-    <img src="FB_IMG_1766830621054.jpg" alt="The Royal Oak Pub">
-    <img src="FB_IMG_1766830486951.jpg" alt="The Royal Oak Pub">
-    <img src="FB_IMG_1766830461342.jpg" alt="The Royal Oak Pub">
-    <img src="FB_IMG_1766830637090.jpg" alt="The Royal Oak Pub">
-    <img src="FB_IMG_1766830453001.jpg" alt="The Royal Oak Pub">
-    <img src="FB_IMG_1766830663448.jpg" alt="The Royal Oak Pub">
-    <img src="FB_IMG_1766830999864.jpg" alt="The Royal Oak Pub">
-    <img src="FB_IMG_1766830908965.jpg" alt="The Royal Oak Pub">
+    <img src="Pub/FB_IMG_1766830418704.jpg" alt="The Royal Oak Pub">
+    <img src="Pub/FB_IMG_1766830645222.jpg" alt="The Royal Oak Pub">
+    <img src="Pub/FB_IMG_1766830656365.jpg" alt="The Royal Oak Pub">
+    <img src="Pub/FB_IMG_1766830621054.jpg" alt="The Royal Oak Pub">
+    <img src="Pub/FB_IMG_1766830486951.jpg" alt="The Royal Oak Pub">
+    <img src="Pub/FB_IMG_1766830461342.jpg" alt="The Royal Oak Pub">
+    <img src="Pub/FB_IMG_1766830637090.jpg" alt="The Royal Oak Pub">
+    <img src="Pub/FB_IMG_1766830453001.jpg" alt="The Royal Oak Pub">
+    <img src="Pub/FB_IMG_1766830663448.jpg" alt="The Royal Oak Pub">
+    <img src="Pub/FB_IMG_1766830999864.jpg" alt="The Royal Oak Pub">
+    <img src="Pub/FB_IMG_1766830908965.jpg" alt="The Royal Oak Pub">
   </div>
 
   <div class="buttons">
