--- a/fightingcocks.html
+++ b/fightingcocks.html
@@ -149,10 +149,6 @@ A vibrant pub known for its atmosphere, fantastic food, and a great selection of
     <a href="Fighting-Cocks-images/fighting-cocks-menus/kids-menu/New-Kids-menu-Fighting-Cocks.html">Kids Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/desserts-menu/FC New Dessert Menu 2025.html">Desserts Menu</a>
   </div>
-
- <h2>Gallery</h2>
-  <div class="buttons">
-    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Gallery</a>
   
   <h2>Drink Menus</h2>
   <div class="buttons">
@@ -161,6 +157,10 @@ A vibrant pub known for its atmosphere, fantastic food, and a great selection of
     <a href="Cocktail-Menu-2025.html">Cocktail Menu</a>
   </div>
 
+ <h2>Gallery</h2>
+  <div class="buttons">
+  <a href="Fighting-Cocks-images/Gallery/">Gallery</a>
+  
   <!-- Links to Events & Promotions -->
   <h2>What’s On</h2>
   <div class="buttons">
