--- a/Fighting-Cocks-images/Gallery/room.html
+++ b/Fighting-Cocks-images/Gallery/room.html
@@ -104,12 +104,12 @@
 
   
   <div class="buttons">
-    <a href="/countryinns-pwa/royaloak.html">← Back to Pub</a>
+    <a href="/countryinns-pwa/fightingcocks.html">← Back to Pub</a>
     <a href="/countryinns-pwa/home.html">← Back to Home</a>
   </div>
 
   <footer>
-    © 2025 Country Inns – The Royal Oak
+    © 2025 Country Inns – The Fighting Cocks
   </footer>
 
 </body>
