--- a/Fighting-Cocks-images/Gallery/room.html
+++ b/Fighting-Cocks-images/Gallery/room.html
@@ -88,18 +88,17 @@
 
   <div class="gallery">
     <!-- Folder MUST be named exactly "Pub" (case-sensitive) -->
-    <img src="Pub/ROB.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830418704.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830645222.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830656365.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830621054.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830486951.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830461342.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830637090.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830453001.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830663448.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830999864.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830908965.jpg" alt="The Royal Oak Pub">
+    <img src="Rooms/FB_IMG_1766834806727.jpg" alt="The Fighting Cocks Pub">
+    <img src="Rooms/FB_IMG_1766834809770.jpg" alt="The Fighting Cocks Pub">
+    <img src="Rooms/FB_IMG_1766834821644.jpg" alt="The Fighting Cocks Pub">
+    <img src="Rooms/FB_IMG_1766834834715.jpg" alt="The Fighting Cocks Pub">
+    <img src="Rooms/FB_IMG_1766834837124.jpg" alt="The Fighting Cocks Pub">
+    <img src="Rooms/FB_IMG_1766834860845.jpg" alt="The Fighting Cocks Pub">
+    <img src="Rooms/FB_IMG_1766834864070.jpg" alt="The Fighting Cocks Pub">
+    <img src="Rooms/FB_IMG_1766834882432.jpg" alt="The Fighting Cocks Pub">
+    <img src="Rooms/FB_IMG_1766834885404.jpg" alt="The Fighting Cocks Pub">
+    <img src="Rooms/FB_IMG_1766834824349.jpg" alt="The Fighting Cocks Pub">
+    <img src="Rooms/FB_IMG_1766834867136.jpg" alt="The Fighting Cocks Pub">
   </div>
 
   
