--- a/Fighting-Cocks-images/Gallery/room.html
+++ b/Fighting-Cocks-images/Gallery/room.html
@@ -87,7 +87,7 @@
   <h1>Rooms Gallery</h1>
 
   <div class="gallery">
-    <!-- Folder MUST be named exactly "Pub" (case-sensitive) -->
+    <!-- Folder MUST be named exactly "Rooms" (case-sensitive) -->
     <img src="Rooms/FB_IMG_1766834806727.jpg" alt="The Fighting Cocks Pub">
     <img src="Rooms/FB_IMG_1766834809770.jpg" alt="The Fighting Cocks Pub">
     <img src="Rooms/FB_IMG_1766834821644.jpg" alt="The Fighting Cocks Pub">
