--- a/Fighting-Cocks-images/Gallery/index.html
+++ b/Fighting-Cocks-images/Gallery/index.html
@@ -93,7 +93,7 @@
     <a class="option" href="pub.html">🍺 Pub Gallery</a>
     <a class="option" href="rooms.html">🛏 Rooms Gallery</a>
     <!-- Uncomment when rooms gallery exists -->
-    <!-- <a class="option" href="rooms.html">🛏 Rooms Gallery</a> -->
+    <!-- <a class="option" href="room.html">🛏 Rooms Gallery</a> -->
   </div>
 
 <div class="buttons">
