--- a/Fighting-Cocks-images/Events-Promotions/promotions.html
+++ b/Fighting-Cocks-images/Events-Promotions/promotions.html
@@ -103,15 +103,34 @@
         <a href="promo-25.html"></a>
       </div>
       <div class="card">
-        <img src="FC Direct10.jpg" alt="Book Direct">
-        <h3>Book Direct</h3>
-         <p>Book Direct quoting DIRECT10 to get 10% OFF when reserving a room with us.<br><br>
-          Book your room(s) now at<br>
-          <a href="https://web-bookings.hotels.uk.com/#/booking/51730/items/availability?k=XbkHpDevv1inahpI6xTpMVzFxNTE3MzA%3D&r=1757511259827&a=2&c=" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-           https://thefightingcockspub.co.uk/
-          </a><br>
-          or call <strong>01425 655686</strong>.
-        </p>
+  <img src="Rooms Promo stay 3 days pay for 2.png" alt="Stay More, Pay Less – 3 Nights for the Price of 2">
+
+  <h3>Stay More, Pay Less</h3>
+
+  <p>
+    Enjoy <strong>3 nights for the price of 2</strong> in any of our amazing rooms.<br><br>
+
+    Book a cosy stay with us and enjoy great food, drinks, and comfortable rooms –
+    the perfect getaway under one roof.<br><br>
+
+    <strong>What’s included:</strong><br>
+    • Free Wi-Fi<br>
+    • Pet-friendly rooms<br>
+    • En-suite with shower<br>
+    • Breakfast included<br>
+    • Access to exclusive offers<br><br>
+
+    Book your stay now at<br>
+    <a href="https://web-bookings.hotels.uk.com/#/booking/51730/items/availability?k=XbkHpDevv1inahpI6xTpMVzFxNTE3MzA%3D&r=1757511259827&a=2&c="
+       target="_blank"
+       style="color:#e6d8b5; text-decoration:underline;">
+      https://thefightingcockspub.co.uk/
+    </a><br><br>
+
+    Or call us on <strong>01425 655 686</strong>.
+  </p>
+</div>
+
       </div>
       <div class="card">
         <img src="Cake Deal 2.jpg" alt="Coffee and Cake for £5">
