--- a/Fighting-Cocks-images/Gallery/room.html
+++ b/Fighting-Cocks-images/Gallery/room.html
@@ -103,6 +103,7 @@
 
   
   <div class="buttons">
+    <a href="/countryinns-pwa/index.html">← Back to Gallery Options</a>
     <a href="/countryinns-pwa/fightingcocks.html">← Back to Pub</a>
     <a href="/countryinns-pwa/home.html">← Back to Home</a>
   </div>
