--- a/Fighting-Cocks-images/Gallery/pub.html
+++ b/Fighting-Cocks-images/Gallery/pub.html
@@ -88,22 +88,23 @@
 
   <div class="gallery">
     <!-- Folder MUST be named exactly "Pub" (case-sensitive) -->
-    <img src="Pub/ROB.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830418704.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830645222.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830656365.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830621054.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830486951.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830461342.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830637090.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830453001.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830663448.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830999864.jpg" alt="The Royal Oak Pub">
-    <img src="Pub/FB_IMG_1766830908965.jpg" alt="The Royal Oak Pub">
+    <img src="Pub/Entrance 2.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/484492262_1178776617465571_6585908465684972473_n.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
   </div>
 
   
   <div class="buttons">
+    <a href="/countryinns-pwa/index.html">← Back to Gallery Options</a>
     <a href="/countryinns-pwa/fightingcocks.html">← Back to Pub</a>
     <a href="/countryinns-pwa/home.html">← Back to Home</a>
   </div>
