--- a/Fighting-Cocks-images/Gallery/pub.html
+++ b/Fighting-Cocks-images/Gallery/pub.html
@@ -104,7 +104,7 @@
 
   
   <div class="buttons">
-    <a href="/countryinns-pwa/index.html">← Back to Gallery Options</a>
+    <a href="/countryinns-pwa/Fighting-Cocks-images/Gallery/index.html">← Back to Gallery Options</a>
     <a href="/countryinns-pwa/fightingcocks.html">← Back to Pub</a>
     <a href="/countryinns-pwa/home.html">← Back to Home</a>
   </div>
