--- a/Fighting-Cocks-images/Gallery/pub.html
+++ b/Fighting-Cocks-images/Gallery/pub.html
@@ -90,16 +90,23 @@
     <!-- Folder MUST be named exactly "Pub" (case-sensitive) -->
     <img src="Pub/Entrance 2.jpg" alt="The Fighting Cocks Pub">
     <img src="Pub/484492262_1178776617465571_6585908465684972473_n.jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/e67e67ac-4444-4fc0-a442-3a90aab04516.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/Outside.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/front.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/Outside (2).jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/Outside (3).jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/Play area.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/tb 1-3.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/tb 4-5.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/tb 6-14.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/tb 7-14.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/tb 8-9.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/Bar 1.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/tb 15-16.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/tb 17-9.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/tb 20-21.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/tb 22-25.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/tb 22-25(2).jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/tb 8-9.jpg" alt="The Fighting Cocks Pub">
   </div>
 
   
