--- a/Fighting-Cocks-images/Gallery/pub.html
+++ b/Fighting-Cocks-images/Gallery/pub.html
@@ -92,8 +92,8 @@
     <img src="Pub/484492262_1178776617465571_6585908465684972473_n.jpg" alt="The Fighting Cocks Pub">
     <img src="Pub/Outside.jpg" alt="The Fighting Cocks Pub">
     <img src="Pub/front.jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/Outside (2).jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/Outside (3).jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/Outside2.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/Outside3.jpg" alt="The Fighting Cocks Pub">
     <img src="Pub/Play area.jpg" alt="The Fighting Cocks Pub">
     <img src="Pub/tb 1-3.jpg" alt="The Fighting Cocks Pub">
     <img src="Pub/tb 4-5.jpg" alt="The Fighting Cocks Pub">
@@ -105,7 +105,7 @@
     <img src="Pub/tb 17-9.jpg" alt="The Fighting Cocks Pub">
     <img src="Pub/tb 20-21.jpg" alt="The Fighting Cocks Pub">
     <img src="Pub/tb 22-25.jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/tb 22-25(2).jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/tb 22-26.jpg" alt="The Fighting Cocks Pub">
     <img src="Pub/tb 8-9.jpg" alt="The Fighting Cocks Pub">
   </div>
 
