--- a/Fighting-Cocks-images/Gallery/pub.html
+++ b/Fighting-Cocks-images/Gallery/pub.html
@@ -105,7 +105,7 @@
     <img src="Pub/tb 20-21.jpg" alt="The Fighting Cocks Pub">
     <img src="Pub/tb 22-25.jpg" alt="The Fighting Cocks Pub">
     <img src="Pub/tb 22-26.jpg" alt="The Fighting Cocks Pub">
-    <img src="Pub/tb 8-9.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/tb 25.jpg" alt="The Fighting Cocks Pub">
   </div>
 
   
