--- a/woolpack.html
+++ b/woolpack.html
@@ -146,6 +146,7 @@ Set by the Avon river, this classic pub is a perfect spot for delicious dining a
     <a href="Woolpack-images/Woolpack-Menus/main-menu/summer-menu-2025.html">Menu</a>
     <a href="Woolpack-images/Woolpack-Menus/sunday-menu/Summer-sunday-menu-2025(3).html">Sunday Menu</a>
     <a href="Woolpack-images/Woolpack-Menus/2 Course-menu/Woolpack 2 Course Menu.html">2 Course Menu</a>
+    <a href="https://qrmenu.com/menus/the-woolpack-sopley/specials-board/">Chef's Daily Specials</a>
   </div>
 
    <h2>Gallery</h2>
