--- a/trustyservant.html
+++ b/trustyservant.html
@@ -148,6 +148,7 @@ A charming 16th century pub in Minstead, offering a warm welcome, fine ales, and
     <a href="Trusty-Servant-images/Trusty-Servant-Menus/sunday-menu/Autumn-Sunday-Menu-Final-oct-25.html">Sunday Menu</a>
     <a href="Trusty-Servant-images/Trusty-Servant-Menus/kids-menu/Tiny-tums-menu.html">Kids Menu</a>
     <a href="Trusty-Servant-images/Trusty-Servant-Menus/desserts-menu/March-24-dessert-menu-oct-25.html">Desserts Menu</a>
+    <a href="https://www.thetrustyservant.co.uk/daily-specials/">Chef's Daily Specials</a>
   </div>
 
    <h2>Gallery</h2>
