--- a/boldforester.html
+++ b/boldforester.html
@@ -146,6 +146,7 @@
     <a href="bold-forester-images/bold-forester-menus/sunday-menu/bold-new-sunday-menu-25.html">Sunday Menu</a>
     <a href="bold-forester-images/bold-forester-menus/kids-menu/bold-new-kids-menu-25.html">Kids Menu</a>
     <a href="bold-forester-images/bold-forester-menus/desserts-menu/bold-new-dessert-menu-25.html">Desserts Menu</a>
+    <a href="https://www.theboldforesternewforest.co.uk/the-bold-forester-chefs-daily-specials/">Chef's Daily Specials</a>
   </div>
 
    <h2>Gallery</h2>
