--- a/royaloak.html
+++ b/royaloak.html
@@ -149,6 +149,7 @@ blends tradition with contemporary flavours</p>
     <a href="Royal-Oak-images/Royal-Oak-Menus/main-menu/Summer Menu.html">Menu</a>
     <a href="Royal-Oak-images/Royal-Oak-Menus/sunday-menu/Sunday Menu.html">Sunday Menu</a>
     <a href="Royal-Oak-images/Royal-Oak-Menus/desserts-menu/Dessert Menu ROB.html">Desserts Menu</a>
+    <a href="https://www.theroyaloakbeaulieu.co.uk/daily-specials/">Chef's Daily Specials</a>
   </div>
     
   <h2>Drink Menus</h2>
