--- a/lambinn.html
+++ b/lambinn.html
@@ -147,6 +147,7 @@ steeped in heritage, The Lamb Inn offers hearty food, roaring fires, and a true 
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/sunday-menu/Sunday-25.26-.html">Sunday Menu</a>
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/kids-menu/Lamb-Kids-Menu-april-25.html">Kids Menu</a>
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/desserts-menu/Classics-dessert-april-25.html">Desserts Menu</a>
+    <a href="https://www.thelambnomansland.co.uk/the-lamb-inn-chefs-daily-specials/">Chef's Daily Specials</a>
   </div>
 
  <h2>Gallery</h2>
