--- a/fightingcocks.html
+++ b/fightingcocks.html
@@ -148,6 +148,7 @@ A vibrant pub known for its atmosphere, fantastic food, and a great selection of
     <a href="Fighting-Cocks-images/fighting-cocks-menus/sunday-menu/FC WINTER 25 SUNDAY MENU.html">Sunday Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/kids-menu/New-Kids-menu-Fighting-Cocks.html">Kids Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/desserts-menu/FC New Dessert Menu 2025.html">Desserts Menu</a>
+    <a href="https://thefightingcockspub.co.uk/daily-specials/">Chef's Daily Specials</a>
   </div>
   
   <h2>Drink Menus</h2>
