--- a/Trusty-Servant-images/Gallery/index.html
+++ b/Trusty-Servant-images/Gallery/index.html
@@ -102,7 +102,7 @@
 </div>
 
   <footer>
-    © 2025 Country Inns – The Fighting Cocks
+    © 2025 Country Inns – The Trusty Servant Inn
   </footer>
 
 </body>
