--- a/Trusty-Servant-images/Gallery/room.html
+++ b/Trusty-Servant-images/Gallery/room.html
@@ -88,7 +88,11 @@
 
   <div class="gallery">
     <!-- Folder MUST be named exactly "Rooms" (case-sensitive) -->
-    <img src="Rooms/FB_IMG_1766834806727.jpg" alt="The Fighting Cocks Pub">
+    <img src="Room 1 – Bolderwood.jpg" alt="The Trusty Servant Inn">
+    <img src="Room 2 – Andrews Mare.jpg" alt="The Trusty Servant Inn">
+    <img src="Room 3 – Highland Water.jpg" alt="The Trusty Servant Inn">
+    <img src="Room 4 – Acres Down.jpg" alt="The Trusty Servant Inn">
+    <img src="Room 5 – Janesmoor.jpg" alt="The Trusty Servant Inn">
     
   </div>
 
