--- a/Trusty-Servant-images/Gallery/pub.html
+++ b/Trusty-Servant-images/Gallery/pub.html
@@ -88,7 +88,7 @@
 
   <div class="gallery">
     <!-- Folder MUST be named exactly "Pub" (case-sensitive) -->
-    <img src="Pub/Entrance 2.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/Trusty.jpg" alt="The Trusty Servant Inn">
     
   </div>
 
