--- a/trustyservant.html
+++ b/trustyservant.html
@@ -153,7 +153,7 @@ A charming 16th century pub in Minstead, offering a warm welcome, fine ales, and
 
    <h2>Gallery</h2>
   <div class="buttons">
-    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Gallery</a>
+    <a href="Trusty-Servant-images/Gallery/">Gallery</a>
     
   <h2>Drink Menus</h2>
   <div class="buttons">
