--- a/newforestinn.html
+++ b/newforestinn.html
@@ -160,7 +160,7 @@ A traditional New Forest pub, perfect for relaxed dining, real ales, cosy stay, 
 
    <h2>Gallery</h2>
   <div class="buttons">
-    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Gallery</a>
+    <a href="New-Forest-Inn-images/Gallery/">Gallery</a>
     
   <h2>Drink Menus</h2>
   <div class="buttons">
