--- a/New-Forest-Inn-images/Gallery/room.html
+++ b/New-Forest-Inn-images/Gallery/room.html
@@ -88,7 +88,14 @@
 
   <div class="gallery">
     <!-- Folder MUST be named exactly "Rooms" (case-sensitive) -->
-    <img src="Rooms/FB_IMG_1766834806727.jpg" alt="The Fighting Cocks Pub">
+    <img src="Rooms/Room-1-Anderwood.jpg" alt="The New Forest Inn">
+    <img src="Rooms/Room-2-Brockishill.jpg" alt="The New Forest Inn">
+    <img src="Rooms/Room-3-Hollidayshill.jpg" alt="The New Forest Inn">
+    <img src="Rooms/Room-4-Holmhill.jpg" alt="The New Forest Inn">
+    <img src="Rooms/Room-5-Knightwood.jpg" alt="The New Forest Inn">
+    <img src="Rooms/Room-6-Poundhill.jpg" alt="The New Forest Inn">
+    <img src="Rooms/Room-7-Vinneyridge.jpg" alt="The New Forest Inn">
+    <img src="Rooms/Room-8-Puckpits.jpg" alt="The New Forest Inn">
     
   </div>
 
