--- a/New-Forest-Inn-images/Gallery/pub.html
+++ b/New-Forest-Inn-images/Gallery/pub.html
@@ -88,7 +88,18 @@
 
   <div class="gallery">
     <!-- Folder MUST be named exactly "Pub" (case-sensitive) -->
-    <img src="Pub/Entrance 2.jpg" alt="The Fighting Cocks Pub">
+    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
+    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
+    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
+    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
+    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
+    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
+    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
+    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
+    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
+    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
+    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
+    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
     
   </div>
 
