--- a/New-Forest-Inn-images/Gallery/pub.html
+++ b/New-Forest-Inn-images/Gallery/pub.html
@@ -88,18 +88,16 @@
 
   <div class="gallery">
     <!-- Folder MUST be named exactly "Pub" (case-sensitive) -->
-    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
-    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
-    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
-    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
-    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
-    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
-    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
-    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
-    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
-    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
-    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
-    <img src="Pub/Entrance 2.jpg" alt="The New Forest Inn">
+    <img src="Pub/NFI.jpg" alt="The New Forest Inn">
+    <img src="Pub/NFI(2).jpg" alt="The New Forest Inn">
+    <img src="Pub/The-New-Forest-Inn-horse.jpg" alt="The New Forest Inn">
+    <img src="Pub/20250607_123603.jpg" alt="The New Forest Inn">
+    <img src="Pub/20250607_123619.jpg" alt="The New Forest Inn">
+    <img src="Pub/20250607_123317.jpg" alt="The New Forest Inn">
+    <img src="Pub/20250607_123349.jpg" alt="The New Forest Inn">
+    <img src="Pub/20250607_123603.jpg" alt="The New Forest Inn">
+    <img src="Pub/20250607_123453.jpg" alt="The New Forest Inn">
+    <img src="Pub/20250607_123522.jpg" alt="The New Forest Inn">
     
   </div>
 
