--- a/New-Forest-Inn-images/Gallery/pub.html
+++ b/New-Forest-Inn-images/Gallery/pub.html
@@ -96,8 +96,11 @@
     <img src="Pub/20250607_123317.jpg" alt="The New Forest Inn">
     <img src="Pub/20250607_123349.jpg" alt="The New Forest Inn">
     <img src="Pub/20250607_123603.jpg" alt="The New Forest Inn">
+    <img src="Pub/snug.png" alt="The New Forest Inn">
     <img src="Pub/20250607_123453.jpg" alt="The New Forest Inn">
     <img src="Pub/20250607_123522.jpg" alt="The New Forest Inn">
+    <img src="Pub/garden 1.png" alt="The New Forest Inn">
+    <img src="Pub/garden 2.png" alt="The New Forest Inn">
     
   </div>
 
