--- a/woolpack.html
+++ b/woolpack.html
@@ -151,7 +151,7 @@ Set by the Avon river, this classic pub is a perfect spot for delicious dining a
 
    <h2>Gallery</h2>
   <div class="buttons">
-    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Gallery</a>
+    <a href="Woolpack-images/Gallery/">Gallery</a>
     
   <h2>Drink Menus</h2>
   <div class="buttons">
