--- a/Woolpack-images/Gallery/pub.html
+++ b/Woolpack-images/Gallery/pub.html
@@ -88,7 +88,7 @@
 
   <div class="gallery">
     <!-- Folder MUST be named exactly "Pub" (case-sensitive) -->
-    <img src="Pub/unnamed (2).png.jpg" alt="The Woolpack">
+    <img src="Pub/unnamed (2).png" alt="The Woolpack">
     <img src="Pub/unnamed (1).png" alt="The Woolpack">
     <img src="Pub/Woolpack.jpg" alt="The Woolpack">
     <img src="Pub/unnamed (4).png" alt="The Woolpack">
