--- a/boldforester.html
+++ b/boldforester.html
@@ -151,7 +151,7 @@
 
    <h2>Gallery</h2>
   <div class="buttons">
-    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Gallery</a>
+    <a href="bold-forester-images/Gallery/">Gallery</a>
     
   <h2>Drink Menus</h2>
   <div class="buttons">
