--- a/bold-forester-images/Gallery/pub.html
+++ b/bold-forester-images/Gallery/pub.html
@@ -95,8 +95,8 @@
     <img src="Pub/Snug3.jpg" alt="The Bold Forester">
     <img src="Pub/Snug4.jpg" alt="The Bold Forester">
     <img src="Pub/Snug5.jpg" alt="The Bold Forester">
-    <img src="Pub/unnamed.jpg" alt="The Bold Forester">
-    <img src="Pub/unnamed (1).jpg" alt="The Bold Forester">
+    <img src="Pub/unnamed.png" alt="The Bold Forester">
+    <img src="Pub/unnamed (1).png" alt="The Bold Forester">
   </div>
 
   <div class="buttons">
