--- a/Lamb-Inn-images/Gallery/pub.html
+++ b/Lamb-Inn-images/Gallery/pub.html
@@ -88,15 +88,20 @@
 
   <div class="gallery">
     <!-- Folder MUST be named exactly "Pub" (case-sensitive) -->
-    <img src="Pub/Bold.jpg" alt="The Bold Forester">
-    <img src="Pub/Outside2.jpg" alt="The Bold Forester">
-    <img src="Pub/Snug1.jpg" alt="The Bold Forester">
-    <img src="Pub/Snug2.jpg" alt="The Bold Forester">
-    <img src="Pub/Snug3.jpg" alt="The Bold Forester">
-    <img src="Pub/Snug4.jpg" alt="The Bold Forester">
-    <img src="Pub/Snug5.jpg" alt="The Bold Forester">
-    <img src="Pub/unnamed.png" alt="The Bold Forester">
-    <img src="Pub/unnamed (1).png" alt="The Bold Forester">
+    <img src="Pub/unnamed7.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed2.png" alt="The Lamb Inn">
+    <img src="Pub/LambInn.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed9.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed5.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed3.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed6.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed8.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed10.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed1.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed11.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed12.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed13.png" alt="The Lamb Inn">
   </div>
 
   <div class="buttons">
