--- a/lambinn.html
+++ b/lambinn.html
@@ -152,7 +152,7 @@ steeped in heritage, The Lamb Inn offers hearty food, roaring fires, and a true 
 
  <h2>Gallery</h2>
   <div class="buttons">
-    <a href="Royal-Oak-images/Royal-Oak-Menus/drinks-menu/0-Drinks.html">Gallery</a>
+    <a href="Lamb-Inn-images/Gallery/">Gallery</a>
   
   <h2>Drink Menus</h2>
   <div class="buttons">
