--- a/Lamb-Inn-images/Gallery/pub.html
+++ b/Lamb-Inn-images/Gallery/pub.html
@@ -90,18 +90,18 @@
     <!-- Folder MUST be named exactly "Pub" (case-sensitive) -->
     <img src="Pub/unnamed7.png" alt="The Lamb Inn">
     <img src="Pub/unnamed2.png" alt="The Lamb Inn">
-    <img src="Pub/LambInn.png" alt="The Lamb Inn">
+    <img src="Pub/LambInn.jpg" alt="The Lamb Inn">
     <img src="Pub/unnamed9.png" alt="The Lamb Inn">
     <img src="Pub/unnamed5.png" alt="The Lamb Inn">
     <img src="Pub/unnamed3.png" alt="The Lamb Inn">
     <img src="Pub/unnamed6.png" alt="The Lamb Inn">
     <img src="Pub/unnamed8.png" alt="The Lamb Inn">
-    <img src="Pub/unnamed.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed4.png" alt="The Lamb Inn">
     <img src="Pub/unnamed10.png" alt="The Lamb Inn">
     <img src="Pub/unnamed1.png" alt="The Lamb Inn">
     <img src="Pub/unnamed11.png" alt="The Lamb Inn">
-    <img src="Pub/unnamed12.png" alt="The Lamb Inn">
-    <img src="Pub/unnamed13.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed12.jpg" alt="The Lamb Inn">
+    <img src="Pub/unnamed13.jpg" alt="The Lamb Inn">
   </div>
 
   <div class="buttons">
