--- a/Lamb-Inn-images/Gallery/pub.html
+++ b/Lamb-Inn-images/Gallery/pub.html
@@ -96,6 +96,7 @@
     <img src="Pub/unnamed3.png" alt="The Lamb Inn">
     <img src="Pub/unnamed6.png" alt="The Lamb Inn">
     <img src="Pub/unnamed8.png" alt="The Lamb Inn">
+    <img src="Pub/unnamed14.png" alt="The Lamb Inn">
     <img src="Pub/unnamed4.png" alt="The Lamb Inn">
     <img src="Pub/unnamed10.png" alt="The Lamb Inn">
     <img src="Pub/unnamed1.png" alt="The Lamb Inn">
