--- a/Trusty-Servant-images/Gallery/pub.html
+++ b/Trusty-Servant-images/Gallery/pub.html
@@ -88,7 +88,20 @@
 
   <div class="gallery">
     <!-- Folder MUST be named exactly "Pub" (case-sensitive) -->
-    <img src="Pub/Trusty.jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed (1).jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed (5).jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed (10).jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed.jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed (9).jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed (2).jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed (11).jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed (8).jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed (13).jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed (14).jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed (12).jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed (6).jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed (3).jpg" alt="The Trusty Servant Inn">
+    <img src="Pub/unnamed (7).jpg" alt="The Trusty Servant Inn">
     
   </div>
 
