--- a/promo-25.html
+++ b/promo-25.html
@@ -124,7 +124,7 @@
       <li>Offer valid Monday to Friday only.</li>
       <li>Offer valid from 5th January until 27th March.</li>
       <li>Not valid in conjunction with any other offer or promotion.</li>
-      <li>Discount applies to food items only; drinks are excluded.</li>
+      <li>Discount applies to food items only, drinks are excluded.</li>
       <li>Management reserves the right to amend or withdraw this offer at any time.</li>
     </ul>
   </div>
