--- a/Fighting-Cocks-images/Events-Promotions/events.html
+++ b/Fighting-Cocks-images/Events-Promotions/events.html
@@ -95,15 +95,29 @@
   </header>
 
   <main>
-    <div class="card-grid">
-      <div class="card">
-        <img src="Events coming soon2.jpg" alt="Upcoming Events – Stay Tuned">
-        <h3>Upcoming Events</h3>
-        <p>
-          Exciting new events are on the way! Stay tuned for updates and be the first to know what’s coming soon at 
-          The Fighting Cocks.
-        </p>
-    </div>
+    <div class="card">
+  <img src="Valentines Day Dinner Poster.png" alt="Valentine’s Weekend at The Fighting Cocks">
+
+  <h3>Valentine’s Weekend</h3>
+
+  <p>
+    If you’ve loved us before… Valentine’s is the perfect excuse to come back ❤️
+  </p>
+
+  <p>
+    Enjoy a whole weekend of love with romantic specials alongside favourites from our regular menu.
+  </p>
+
+  <p><strong>Friday 13th – Sunday 15th February 2026</strong></p>
+
+  <p>
+    <a href="https://www.thefightingcockspub.co.uk" class="card-link">
+      Book your table online
+    </a>
+    <br>
+    or call us on <strong>01425 655686</strong>
+  </p>
+</div>
   </main>
 
   <div class="buttons">
