--- a/Fighting-Cocks-images/Events-Promotions/events.html
+++ b/Fighting-Cocks-images/Events-Promotions/events.html
@@ -101,7 +101,7 @@
   <h3>Valentine’s Weekend</h3>
 
   <p>
-    If you’ve loved us before… Valentine’s is the perfect excuse to come back ❤️
+    If you’ve loved us before…Valentine’s is the perfect excuse to come back ❤️
   </p>
 
   <p>
@@ -112,12 +112,13 @@
 
   <p>
     <a href="https://www.thefightingcockspub.co.uk" class="card-link">
-      Book your table online
-    </a>
-    <br>
-    or call us on <strong>01425 655686</strong>
-  </p>
-</div>
+      Book your table now at<br>
+          <a href="https://thefightingcockspub.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+           https://thefightingcockspub.co.uk/
+          </a><br>
+          or call <strong>01425 655686</strong>.
+        </p>
+      </div>
   </main>
 
   <div class="buttons">
