--- a/Fighting-Cocks-images/Events-Promotions/events.html
+++ b/Fighting-Cocks-images/Events-Promotions/events.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Fighting Cocks – Events</title>
-  <link rel="stylesheet" href="style.css">
+  <title>The Fighting Cocks – Valentine’s Weekend</title>
+
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -27,18 +27,17 @@
 
     .card-grid {
       display: flex;
-      flex-direction: column;
+      justify-content: center;
       align-items: center;
-      gap: 1.5rem;
       margin: 2rem 0;
     }
 
     .card {
       background: #2e472e;
       border-radius: 12px;
-      padding: 1rem;
-      max-width: 400px;
-      width: 100%;
+      padding: 1.2rem;
+      max-width: 420px;
+      width: 90%;
       text-align: center;
       transition: transform 0.2s ease;
     }
@@ -62,7 +61,23 @@
     .card p {
       font-size: 0.95rem;
       line-height: 1.5;
-      color: #f4f4f4;
+      margin: 0.6rem 0;
+    }
+
+    .card-link {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.75rem 1.3rem;
+      background: #e6d8b5;
+      color: #2e472e;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+
+    .card-link:hover {
+      background: #f2e6c8;
     }
 
     .buttons {
@@ -89,41 +104,53 @@
     }
   </style>
 </head>
+
 <body>
+
   <header>
     <h1>Upcoming Events</h1>
   </header>
 
   <main>
-    <div class="card">
-  <img src="Valentines Day Dinner Poster.png" alt="Valentine’s Weekend at The Fighting Cocks">
+    <div class="card-grid">
+      <div class="card">
 
-  <h3>Valentine’s Weekend</h3>
+        <img src="Valentines Day Dinner Poster.png" alt="Valentine’s Weekend at The Fighting Cocks">
 
-  <p>
-    If you’ve loved us before…Valentine’s is the perfect excuse to come back ❤️
-  </p>
+        <h3>Valentine’s Weekend</h3>
 
-  <p>
-    Enjoy a whole weekend of love with romantic specials alongside favourites from our regular menu.
-  </p>
-
-  <p><strong>Friday 13th – Sunday 15th February 2026</strong></p>
-
-  <p>
-    <a href="https://www.thefightingcockspub.co.uk" class="card-link">
-      Book your table now at<br>
-          <a href="https://thefightingcockspub.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-           https://thefightingcockspub.co.uk/
-          </a><br>
-          or call <strong>01425 655686</strong>.
+        <p>
+          If you’ve loved us before… Valentine’s is the perfect excuse to come back ❤️
         </p>
+
+        <p>
+          Enjoy a whole weekend of love with romantic specials alongside favourites from our regular menu.
+        </p>
+
+        <p>
+          <strong>Friday 13th – Sunday 15th February 2026</strong>
+        </p>
+
+        <p>
+          <a href="https://thefightingcockspub.co.uk/food/#restaurant_form"
+             class="card-link"
+             target="_blank">
+            Book your table now
+          </a>
+        </p>
+
+        <p>
+          or call <strong>01425 655686</strong>
+        </p>
+
       </div>
+    </div>
   </main>
 
   <div class="buttons">
     <a href="../../fightingcocks.html">⬅ Back to Pub Page</a>
     <a href="../../home.html">⬅ Back to Home</a>
   </div>
+
 </body>
 </html>
