--- a/Fighting-Cocks-images/Events-Promotions/events.html
+++ b/Fighting-Cocks-images/Events-Promotions/events.html
@@ -144,6 +144,48 @@
         </p>
 
       </div>
+  <div class="card-grid">
+    <div class="card">
+
+    <img src="Mothering Sunday.png"
+         alt="Mothering Sunday at The Fighting Cocks">
+
+    <h3>Mothering Sunday</h3>
+
+    <p>
+      <strong>Sunday 15th March</strong>
+    </p>
+
+    <p>
+      Celebrate Mum with great food & a relaxed day out —  
+      treat Mum to a delicious meal at The Fighting Cocks.
+    </p>
+
+    <p>
+      Enjoy our Mothering Sunday specials alongside favourites from our regular menu.
+    </p>
+    <p> style="font-style: italic; color: #e6d8b5;">
+      A special day for Mum 🌸
+    </p>
+    <p> style="font-style: italic; color: #e6d8b5;">
+      Tables fill fast – booking recommended 🌸
+    </p>
+
+    <p>
+      <a href="https://thefightingcockspub.co.uk/food/#restaurant_form"
+         class="card-link"
+         target="_blank">
+        Book your table now
+      </a>
+    </p>
+
+    <p>
+      or call <strong>01425 655686</strong>
+    </p>
+
+  </div>
+</div>
+
     </div>
   </main>
 
