--- a/Fighting-Cocks-images/Events-Promotions/events.html
+++ b/Fighting-Cocks-images/Events-Promotions/events.html
@@ -150,7 +150,7 @@
 
         <p><strong>Sunday 15th March</strong></p>
 
-        <p>Celebrate Mum with great food & a relaxed day out — treat Mum to a delicious meal at The Fighting Cocks.</p>
+        <p>Celebrate Mum with great food & a relaxed day out, so treat Mum to a delicious meal at The Fighting Cocks.</p>
 
         <p>Enjoy our Mothering Sunday specials alongside favourites from our regular menu.</p>
 
