--- a/Fighting-Cocks-images/Events-Promotions/events.html
+++ b/Fighting-Cocks-images/Events-Promotions/events.html
@@ -144,7 +144,7 @@
 
       <!-- Mothering Sunday Card -->
       <div class="card">
-        <img src="White Pink Floral Mother's Day Your Story.png" alt="Mothering Sunday at The Fighting Cocks">
+        <img src="Mothering Sunday.png" alt="Mothering Sunday at The Fighting Cocks">
 
         <h3>Mothering Sunday</h3>
 
