--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -97,27 +97,20 @@
   <main>
     <div class="card-grid">
   <div class="card">
-    <img src="christmas-quiz-poster.jpeg" alt="Christmas Quiz at The Lamb Inn Nomansland">
-    <h3>Christmas Quiz</h3>
-
-    <p><strong>Tuesday 23/12 – Starts at 7pm</strong></p>
-
-    <p>
-      Join us for a charming festive gathering filled with cheer, including a
-      table dressing competition and a Christmas jumper competition –
-      with prizes to be won!<br><br>
-
-      Hot & cold festive drinks will be available, and the kitchen is
-      open until 9.30pm.<br><br>
-
-      Book your table now at<br>
-      <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form"
-         target="_blank"
-         style="color:#e6d8b5; text-decoration:underline;">
-         www.thelambnomansland.co.uk
-      </a><br>
-      or call <strong>01794 331331</strong>.
-    </p>
+  <img src="Events coming soon2.jpg" alt="Events Coming Soon">
+  <h3>Events at The Lamb Inn</h3>
+  <p><strong>No events scheduled at the moment</strong></p>
+  <p>
+    We don’t have any events planned right now, but we’re always working on something special behind the scenes.<br><br>
+    Please check back soon or keep an eye on our website and social media for upcoming events and announcements.<br><br>
+    In the meantime, you’re very welcome to join us for great food, drinks, and a warm welcome.<br><br>
+    Book your table at<br>
+    <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+      www.thelambnomansland.co.uk
+    </a><br>
+    or call <strong>01794 331331</strong>.
+  </p>
+</div>
   </div>
         <div class="card">
     <img src="Lamb New Years Poster.jpg" alt="🎆New years eve 🎆 at The Lamb Inn Nomansland">
