--- a/Royal-Oak-images/Events-Promotions/events.html
+++ b/Royal-Oak-images/Events-Promotions/events.html
@@ -96,12 +96,14 @@
 
   <main>
     <div class="card-grid">
-      <div class="card">
-        <img src="Quiz-time.png" alt="🧠 Quiz Night at The Royal Oak ">
-        <h3>Quiz Night</h3>
-        <p>
-           Test your knowledge and join the fun! Gather your team of up to six, enjoy great food & drinks, and compete for bragging rights in a lively and relaxed pub atmosphere.
-          All proceeds go to support the New Forest Trust<br><br>
+       <div class="card">
+  <img src="Events coming soon.jpg" alt="Events Coming Soon">
+  <h3>Events at The Royal Oak</h3>
+  <p><strong>No events scheduled at the moment</strong></p>
+  <p>
+    We don’t have any events planned right now, but we’re always working on something special behind the scenes.<br><br>
+    Please check back soon or keep an eye on our website and social media for upcoming events and announcements.<br><br>
+    In the meantime, you’re very welcome to join us for great food, drinks, and a warm welcome.<br><br>
           Book your table now at<br>
           <a href="https://www.theroyaloakbeaulieu.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
            https://www.theroyaloakbeaulieu.co.uk/
