--- a/New-Forest-Inn-images/Events-Promotions/events.html
+++ b/New-Forest-Inn-images/Events-Promotions/events.html
@@ -97,13 +97,13 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="NFI-christmas-quiz.jpg"
-        <h3>🧠 Quiz Night at The New Forest Inn</h3>
-        <p>
-          Join us for another amazing Quiz Night on Friday 19th December! 
-          Quiz starts at 8pm, £3 per person, max of 6 people per team!
-          All proceeds to Love the forest!
-          <br><br>
+  <img src="coming soon.png" alt="Events Coming Soon">
+  <h3>Events at The New Forest Inn</h3>
+  <p><strong>No events scheduled at the moment</strong></p>
+  <p>
+    We don’t have any events planned right now, but we’re always working on something special behind the scenes.<br><br>
+    Please check back soon or keep an eye on our website and social media for upcoming events and announcements.<br><br>
+    In the meantime, you’re very welcome to join us for great food, drinks, and a warm welcome.<br><br>
           Book your table now at<br>
           <a href="https://www.thenewforestinn.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
            https://www.thenewforestinn.co.uk/
