--- a/bold-forester-images/Events-Promotions/events.html
+++ b/bold-forester-images/Events-Promotions/events.html
@@ -116,6 +116,23 @@
     </a><br>
     or call <strong>02380 175588</strong>.
   </p>
+  <div class="card">
+  <img src="Bold Valentines.jpg" alt="Valentine’s Day Chef’s Specials at The Bold Forester">
+  <h3>Valentine’s Day Chef’s Specials</h3>
+  <p><strong>Now Open for Reservations</strong></p>
+  <p>
+    Celebrate Valentine’s Day with amazing specials lovingly crafted by our chefs, perfect for a romantic evening together.<br><br>
+
+    <strong>Friday 14th February</strong><br><br>
+
+    Tables are limited, so we recommend booking early to avoid disappointment.<br><br>
+
+    Book your table now at<br><br>
+    <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+      www.theboldforesternewforest.co.uk
+    </a><br>
+    or call <strong>02380 175588</strong>.
+  </p>
 </div>
       
   </main>
