--- a/bold-forester-images/Events-Promotions/events.html
+++ b/bold-forester-images/Events-Promotions/events.html
@@ -117,7 +117,7 @@
     or call <strong>02380 175588</strong>.
   </p>
   <div class="card">
-  <img src="Bold Valentines.jpg" alt="Valentine’s Day Chef’s Specials at The Bold Forester">
+  <img src="Bold Valentines.png" alt="Valentine’s Day Chef’s Specials at The Bold Forester">
   <h3>Valentine’s Day Chef’s Specials</h3>
   <p><strong>Now Open for Reservations</strong></p>
   <p>
